# easyroute

./: .env.example  .gitignore  CLAUDE-ARCHITECTURE.md  CLAUDE-GIT.md  CLAUDE-GUIDELINES.md  CLAUDE-PERFORMANCE.md  CLAUDE-SETUP.md  CLAUDE.md  CLEAN_CODE_ANALYSIS.md  Cargo.toml  DEVELOPMENT.md  LICENSE  MIGRATION-ON-DEVICE.md  MOBILE.md  POI_CATEGORIES.md  README.md  TESTING.md  TEST_SUMMARY.md  VISUALIZATION.md  docker-compose.yml  justfile  route-api-architecture.md  route.geojson  routes.json  setup-hooks.sh
.cargo/: config.toml
.claude/: settings.local.json
.github/: README.md  dependabot.yml
.github/workflows/: ci.yml  pr.yml  release.yml  scheduled.yml
app/: index.html  main.js  style.css
docker/: init-test-db.sh
docs/: ADVANCED_POI_STRATEGY.md
evaluation/: baseline.json
examples/: test_new_categories.json  test_request.json
hooks/: README.md  pre-commit
ios/EasyRoute/: Config.xcconfig  Local.xcconfig.example
ios/EasyRoute/EasyRoute/: ContentView.swift  EasyRoute-Bridging-Header.h  EasyRouteApp.swift  Info.plist  ServerBridge.swift  easyroute.h
ios/EasyRoute/EasyRoute.xcodeproj/: project.pbxproj
ios/EasyRoute/EasyRoute.xcodeproj/xcshareddata/xcschemes/: EasyRoute.xcscheme
ios/EasyRoute/EasyRoute/Models/: APIModels.swift  POICategoryInfo.swift  RegionModels.swift  RouteState.swift
ios/EasyRoute/EasyRoute/Services/: APIClient.swift  GPXExporter.swift  LocationManager.swift  RegionManager.swift
ios/EasyRoute/EasyRoute/Views/: CategoryPickerView.swift  CompactRouteSwitcherView.swift  MapMarkerViews.swift  POIDetailView.swift  RegionManagementView.swift  RouteCardView.swift  RouteControlsView.swift  RouteMapView.swift
ios/EasyRoute/EasyRouteTests/: EasyRouteTests.swift
ios/EasyRoute/EasyRouteUITests/: EasyRouteUITests.swift  EasyRouteUITestsLaunchTests.swift
migrations/: 001_create_pois_table.sql  002_create_osm2pgsql_properties.sql  003_create_route_evaluations.sql
osm/: QUICKSTART.md  README.md  download_osm.sh  import_osm.sh  osm_poi_style.lua  update_osm.sh
osm/data/: .gitignore
scripts/: convert_to_geojson.py  visualize.html
src/: config.rs  constants.rs  error.rs  ffi.rs  lib.rs  main.rs  mobile.rs
src/cache/: memory.rs  mod.rs  redis.rs
src/db/: evaluation_queries.rs  mod.rs  poi_queries.rs  poi_repository.rs  queries.rs  sqlite_repo.rs  sqlite_repo_tests.rs
src/evaluation/: baseline.rs  mod.rs  scenarios.rs
src/models/: coordinates.rs  distance.rs  evaluation.rs  geo.rs  mod.rs  poi.rs  route.rs
src/osm/: mod.rs  tests.rs
src/routes/: debug.rs  evaluation.rs  loop_route.rs  mod.rs  pois.rs
src/services/: mapbox.rs  mod.rs  overpass.rs  overpass_tags.rs.archived  poi_service.rs  route_generator.rs  snapping_service.rs
src/services/route_generator/: geometric_loop.rs  geometry.rs  mod.rs  route_metrics.rs  route_scoring.rs  scoring_strategy.rs  tolerance_strategy.rs  waypoint_selection.rs
tests/: api_tests.rs  database_tests.rs  mapbox_tests.rs  overpass_tests.rs  route_generation_tests.rs
tests/common/: mod.rs
