[package]
name = "easyroute"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros", "uuid", "json", "time"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Geospatial
geo = "0.28"
geojson = "0.24"

# Caching
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }

# Utilities
uuid = { version = "1", features = ["serde", "v4"] }
dotenv = "0.15"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = { version = "0.3", features = ["serde"] }
urlencoding = "2"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
serial_test = "3.0"

[lib]
name = "easyroute"
path = "src/lib.rs"

[[bin]]
name = "easyroute"
path = "src/main.rs"
