[package]
name = "easyroute"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT"

[dependencies]
# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "macros", "uuid", "json", "time"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Geospatial
geo = "0.32"
geojson = "0.24"

# Caching
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }

# Utilities
uuid = { version = "1", features = ["serde", "v4"] }
dotenv = "0.15"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = { version = "0.3", features = ["serde", "formatting"] }
urlencoding = "2"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
serial_test = "3.0"

[lib]
name = "easyroute"
path = "src/lib.rs"

[[bin]]
name = "easyroute"
path = "src/main.rs"

[[bin]]
name = "evaluate"
path = "src/bin/evaluate.rs"
